# PIPK-Net

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  environment.yml  example_drugs.csv  example_results.csv  pyproject.toml
checkpoints/A_baseline/fold_1/: best_outer_model.pt  config.json  metrics.csv  predictions.csv  scaler.json
checkpoints/A_baseline/fold_2/: best_outer_model.pt  config.json  metrics.csv  predictions.csv  scaler.json
checkpoints/A_baseline/fold_3/: best_outer_model.pt  config.json  metrics.csv  predictions.csv  scaler.json
checkpoints/A_baseline/fold_4/: best_outer_model.pt  config.json  metrics.csv  predictions.csv  scaler.json
data/: df_ref.csv
data/benchmarks/: admet_deeppk_casestudy.csv
data/predictions/: casestudy_pipknet.csv  nested_cv_predictions.csv  truth_indeptest.csv
examples/: quickstart.py  tutorial.ipynb
outputs/tables/: macro_average_summary.csv  table1_distribution_stats.csv  table3_ablation_accuracy.csv  table4_vd_cohorts.csv  table5_case_studies.csv  tableS1_hyperparams_A_baseline.csv  tableS2_hyperparams_B_ion.csv  tableS3_hyperparams_C_physio.csv  tableS4_aafe.csv  tableS5_pearson.csv  tableS6_spearman.csv
pipknet/: __init__.py  cli.py  data.py  engine.py  featurizers.py  inference.py  models.py  training.py  utils.py
reproduce/: README.md  __init__.py  config.py  data.py  metrics.py  models_chemberta.py  predictions.py  run_all.py  tables.py
reproduce/figures/: __init__.py  fig1_dataset.py  fig2_4_boxplots.py  fig5_scatter.py  fig6_massbalance.py  fig7_logp.py
tests/: test_smoke.py
(+66 files in other folders)
